adding files during mentor session

--- a/index.html
+++ b/index.html
@@ -1,11 +1,39 @@
+<!-- here I initiated the boilerplate for html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>HTML SOLUTION HOMEPAGE</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+<!-- here I added hyperlinks to all three pages -->
+    <div>
+        <a href="./index.html">Home</a>
+        <a href="./form.html">Form</a>
+        <a href="./Table.html">Table</a>
+    </div>
+
+<!-- here I added my first size header tag  -->
+
+<h1>Welcome to Boise</h1>
+<!-- here I added another size header tag and a list and images -->
+<h3>
+    <ul>
+        <li>Downtown Boise</li>      
+         <img height="150" src="images/boise-downtown-1387405.jpg" alt="Downtown Boise">
+         <li>Tablerock</li>         
+         <img height="150" src="images/tablerock.jpg" alt="Tablerock">
+         <li>Boise Train Depot</li> 
+         <img height="170" src="images/boise depot.jpg" alt="Boise Train Depot">
+    </ul>
+</h3>
+
+
+
+
+
+
 </body>
-</html>
+</html>  
