adding files again

--- a/form.html
+++ b/form.html
@@ -17,11 +17,11 @@
 <!-- here I created a form -->
     
 <form>
-    <input type="text" name "firstname" placeholder="first name">
+    <input type="text" name= "firstName" placeholder="first name">
     <br>
-    <input type="text" name "lastname" placeholder="last name">
+    <input type="text" name= "lastName" placeholder="last name">
     <br>
-    <input type="text" name "contact information" placeholder="contact information">
+    <input type="text" name= "contactInformation" placeholder="contact information">
     <br>
     <button type="submit">submit</button>
 
